src/objects/Baby_Measure__c.object
<CustomObject>
    <fields>
        <fullName>Age_Weeks__c</fullName>
        <formula>TEXT( FLOOR((BLANKVALUE( Date__c , TODAY()) - Baby__r.Birthdate) / 7)) &amp; &apos; weeks old&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Weeks)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Years__c</fullName>
        <formula>TEXT(
IF(
  MONTH(Date__c)&gt;MONTH( Baby__r.Birthdate),
    YEAR(Date__c)-YEAR( Baby__r.Birthdate),  
    IF(AND(MONTH(Date__c) = MONTH( Baby__r.Birthdate), DAY(Date__c) &gt;= DAY( Baby__r.Birthdate)), 
      YEAR(Date__c)-YEAR( Baby__r.Birthdate), 
      (YEAR(Date__c)-YEAR( Baby__r.Birthdate))-1)
)
) &amp; &apos; years old&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age (Years)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baby__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Baby</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Baby Measures</relationshipLabel>
        <relationshipName>Baby_Measures</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Head_Circumference__c</fullName>
        <label>Head Circumference</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Height__c</fullName>
        <label>Height</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight_OZ__c</fullName>
        <label>Weight (oz)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <formula>TEXT(Weight_lbs__c) &amp; &apos; lbs, &apos; &amp;  TEXT(Weight_OZ__c) &amp; &apos; oz&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight_lbs__c</fullName>
        <description>Weight in pounds</description>
        <label>Weight (lbs)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Baby Measure</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Baby__c</columns>
        <columns>Date__c</columns>
        <columns>Height__c</columns>
        <columns>Weight__c</columns>
        <columns>Head_Circumference__c</columns>
        <columns>Age_Weeks__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>m-{000000}</displayFormat>
        <label>Baby Measure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baby Measures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>